--- a/presentation/index.html
+++ b/presentation/index.html
@@ -4,22 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Live примеры для презентации</title>
-    <link rel="stylesheet" href="./src/index.css" />
-    <link rel="stylesheet" href="./src/theme-vscode.css" />
+    <link rel="stylesheet" href="./src/styles/index.css" />
     <script type="module" src="./src/index.ts"></script>
   </head>
   <body>
-    <playground-ide editable-file-system line-numbers resizable>
-      <script type="sample/html" filename="index.html">
-        <!doctype html>
-        <body>
-          Hello
-          <script type="module" src="./index.js">&lt;/script>
-        </body>
-      </script>
-      <script type="sample/ts" filename="index.ts">
-        document.body.appendChild(document.createTextNode("World!"))
-      </script>
-    </playground-ide>
+    <fc25-app></fc25-app>
   </body>
 </html>
