--- a/examples/index.html
+++ b/examples/index.html
@@ -1,28 +1,35 @@
-
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="./global.css" />
-  <title>Примеры</title>
-  <style>
-    ul {
-      list-style: square;
-      color: var(--yellow);
-    }
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./global.css" />
+    <title>Примеры</title>
+    <style>
+      ul {
+        list-style: square;
+        color: var(--yellow);
+      }
 
-    a {
-      color: var(--yellow);
-    }
-  </style>
-</head>
-<body>
-  <ul>
-    <li><a href="./declarative-shadow-dom.html">Декларативный Shadow DOM</a></li>
-    <li><a href="./global-styles/index.html">Глобальные стили</a></li>
-    <li><a href="./a11y-issues.html">Проблемы с некоторыми ARIA атрибутами</a></li>
-    <li><a href="./js-shadow-dom-isolation.html">Изоляция от внешнего JS</a></li>
-  </ul>
-</body>
+      a {
+        color: var(--yellow);
+      }
+    </style>
+  </head>
+  <body>
+    <ul>
+      <li>
+        <a href="./declarative-shadow-dom.html">Декларативный Shadow DOM</a>
+      </li>
+      <li>
+        <a href="./global-styles/index.html">Глобальные стили</a>
+      </li>
+      <li>
+        <a href="./a11y-issues.html">Проблемы с некоторыми ARIA атрибутами</a>
+      </li>
+      <li>
+        <a href="./js-shadow-dom-isolation.html">Изоляция от внешнего JS</a>
+      </li>
+    </ul>
+  </body>
 </html>
