chore(examples): improve texts

--- a/examples/a11y-issues.html
+++ b/examples/a11y-issues.html
@@ -14,5 +14,7 @@
         <span role="checkbox" aria-labelledby="tac"></span>
       </template>
     </div>
+    <hr />
+    <p>Откройте DevTools и посмотрите дерево доступности</p>
   </body>
 </html>
