--- a/examples/declarative-shadow-dom.html
+++ b/examples/declarative-shadow-dom.html
@@ -28,5 +28,10 @@
       </template>
       <p>Абзац находится в Light DOM</p>
     </div>
+    <hr />
+    <div>
+      Это просто пример как можно использовать декларативный Shadow&nbsp;DOM.<br />
+      Откройте DevTools и посмотрите, что сгенерировалось.
+    </div>
   </body>
 </html>
