--- a/examples/global-styles/index.html
+++ b/examples/global-styles/index.html
@@ -9,5 +9,10 @@
   </head>
   <body>
     <div></div>
+    <hr />
+    <p>
+      Глобальные стили можно внедрить через adoptedStyleSheets (смотрите
+      исходный код)
+    </p>
   </body>
 </html>
