--- a/examples/index.html
+++ b/examples/index.html
@@ -13,6 +13,11 @@
 
       a {
         color: var(--yellow);
+        text-decoration: none;
+
+        &:hover {
+          text-decoration: underline;
+        }
       }
     </style>
   </head>
